[project]
name = "reolink-downloader"
version = "0.1.0"
description = "Bulk download videos from a Reolink camera"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "reolink-aio>=0.16.4",
]

[project.scripts]
reolink-downloader = "reolink_downloader:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
